Java 11 support (#609)
Make client to be Java 11 compatible. Use Java 11 to compile Java 8 code and release Java 8 bytecode to prepare for future migartion.